<resources>
    <string name="app_name">BloodApp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_login_sign">Cadastro</string>
    <string name="title_activity_login_forget">Esqueceu sua senha ?</string>
    <string name="email_reset">Informe seu Email para recuperação de senha</string>
    <string name="email_reset_send">Você receberá um email para redefinição da senha</string>
    <string name="pass_reset_send_button">Recuperação de Senha</string>
    <string name="reset_pass_message">Email Enviado!!</string>
    <!-- Formulários -->
    <string name="password">Senha</string>
    <string name="reenter_password">Confirmar Senha</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="mismatch_password">Senha diferente</string>
    <string name="email">Email</string>

    <string name="invalid_email">Email inválido</string>
    <string name="login">Login</string>
    <string name="signin">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="concluir">Concluir</string>
    <string name="name">Nome</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="surename">Sobrenome</string>
    <string name="invalid_surename">Sobrenome inválido</string>
    <string name="contact_phone">Telefone de Contato</string>
    <string name="invalid_contact_phone">Telefone inválido</string>
    <string name="gender">Sexo</string>
    <string name="blood_type">Tipo Sanguíneo</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="invalid_birthdate">Data de Nascimento inválida</string>
    <string name="ask_illness">Possui alguma doença</string>
    <string name="ask_illness2">Qual ?</string>

    <string name="required_field">campo obrigatório</string>
    <string name="invalid_field">inválido</string>
    <string name="check_valid_field">Verificar campo(s) obrigatório(s)</string>
    <!-- -->

    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="about">Sobre</string>
    <string name="config">Configurações</string>
    <string name="notifi">Notificações</string>

    <string name="StringVersaoApp">BloodApp versão Alfa</string>
    <string name="stringContactTitle">Contato: </string>


    <string name="StringQuemSomos">
O BloodApp é um aplicativo mobile no qual seu foco é facilitar a chegada da informação dos hospitais e hemocentros até os doadores de sangue. Através de notificações, que chegam ao celular dos usuários cadastrados, será informado o local para se fazer a doação e a rota para chegar até o hospital ou hemocentro, campanhas de doação também são divulgadas através dos alertas enviados aos doadores.
Hemocentros e hospitais podem se cadastrar via página web para enviar os alertas e criar campanhas
    </string>

    <string name="stringAbout1">
        \tA divulgação de espetáculos teatrais pode ser realizada por meios
físicos, como cartazes, outdoors, folders, banners; ou também, outros meios,
como anúncios e comerciais de TV, rádio, entre outros. Meios que necessitam
que o público consumidor esteja no lugar certo ou na hora certa para obter
conhecimento de tal evento. A internet, por outro lado, permite que
a informação esteja disponível em sites e redes sociais, sem tais limitações.
    </string>
    <string name="stringAbout2">
        \tA proposta do aplicativo Meu Teatro, apoia-se justamente nesta
premissa que a internet apresenta. O Meu Teatro trará informações de peças teatrais organizadas por cidade ou
teatro, de escolha de cada usuário. O aplicativo irá permitir que as pessoas se
informem com mais praticidade, uma vez que, toda informação que precisam
estará organizada e reunida em seu smartphone.
    </string>
    <string name="stringAbout3">
        \tVendo pelo lado dos interessados em divulgar os espetáculos teatrais, o
aplicativo fornecerá aos teatros uma oportunidade de levar sua agenda teatral
aos smartphones de seu público consumidor, agregando um importante meio de
divulgação.
    </string>
    <string name="stringAbout4">
        \tEste projeto está em fase de desenvolvimento, e trabalhamos para prover um serviço que agrege maior praticidade
para pessoas com interece neste tipo de entretenimento e, também, para cias de teatro que busquem
uma forma eficiente de divulgar seus eventos.
    </string>
    <string name="stringContact">
Daniel Tavelli\n(xx)xxxxx-xxxx\ndan.tavelli.2@gmail.com
    </string>
    <string name="logout">Logout</string>

    <!-- Firebase section -->

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="firebase_auth_failure">Falha na Autenticação</string>
    <string name="firebase_conn_failure">Falha de Conexão</string>
    <string name="firebase_pass_failure">Senha Incorreta</string>
    <string name="firebase_mail_failure">Email Incorreto</string>
    <string name="firebase_create_mail_failure">Email já Cadastrado</string>
    <string name="title_activity_reset">ResetActivity</string>

    <string name="firebase_conn_failure_1">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="firebase_auth_failure_1">The password is invalid or the user does not have a password.</string>
    <string name="firebase_auth_failure_2">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="firebase_reset_failure_1">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="firebase_reset_failure_2">The email address is badly formatted.</string>
    <string name="firebase_create_failure_1">The email address is already in use by another account.</string>

    <string name="firebase_reset_mail_bad_formatted_failure">Email mal formatado!</string>
    <string name="firebase_reset_mail_no_record_failure">Email não encontrado!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Permitir Push Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
