<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_med"
    android:orientation="vertical"
    tools:context="com.bloodapp.SignActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/name" />
            <EditText
                android:id="@+id/editSignFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/surename" />
            <EditText
                android:id="@+id/editSignSurename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/email" />
            <EditText
                android:id="@+id/editSignEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/password" />
            <EditText
                android:id="@+id/editSignPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/contact_phone" />
            <EditText
                android:id="@+id/editSignContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/gender" />
            <Spinner
                android:id="@+id/spinnerSignGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/blood_type" />
            <Spinner
                android:id="@+id/spinnerSignBloodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/birthdate" />
            <EditText
                android:id="@+id/editSignAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />


            <CheckBox
                android:id="@+id/checkBoxSignIllness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/ask_illness" />
            <EditText
                android:id="@+id/editSignWhatIllness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_illness2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSignCancel"
                    android:background="@drawable/button_round_corner"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/margin_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/buttonSignConfirm"
                    android:background="@drawable/button_round_corner"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/margin_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/concluir" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
