<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_form"
            android:layout_margin="10dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <!-- IMAGE SECTION -->
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_image_section"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/iv_image_view_profile"
                    android:src="@drawable/profile"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    />
                <Button
                    android:id="@+id/edit_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_edit_light"
                    android:layout_toEndOf="@+id/iv_image_view_profile"
                    android:layout_toRightOf="@+id/iv_image_view_profile"
                    android:layout_alignBottom="@id/iv_image_view_profile"/>
            </RelativeLayout>

            <!-- USER SECTION -->
            <LinearLayout
                android:id="@+id/ll_user_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ll_image_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dados de Acesso"
                    android:id="@+id/header_tv_user_section"
                    android:singleLine="false"
                    android:layout_marginTop="25dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <View
                    android:id="@+id/header_user_section"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/grey"
                    android:layout_below="@id/header_tv_user_section"/>

                <!--<TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:layout_below="@+id/header_user_section"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="john123"
                    android:layout_below="@+id/tv_login"
                    android:id="@+id/edit_login" />

                <TextView
                    android:id="@+id/tv_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:layout_alignTop="@id/tv_login"
                    android:layout_toRightOf="@+id/edit_login"
                    android:layout_toEndOf="@+id/edit_login" />
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="password123@"
                    android:inputType="textPassword"
                    android:id="@+id/edit_pass"
                    android:layout_below="@+id/tv_pass"
                    android:layout_toRightOf="@+id/edit_login"
                    android:layout_toEndOf="@+id/edit_login" />-->

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/profile_edit_email"
                    android:textColor="@color/greyer"
                    />

                <TextView
                    android:id="@+id/tv_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/password" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profile_edit_pass"
                    android:textColor="@color/greyer"
                    />

            </LinearLayout>

            <!-- PERSON SECTION -->
            <LinearLayout
                android:id="@+id/ll_person_section"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_user_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dados Pessoais"
                    android:id="@+id/header_tv_person_section"
                    android:singleLine="false"
                    android:layout_marginTop="25dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <View
                    android:id="@+id/header_person_section"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nome"
                    android:id="@+id/tv_name" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/profile_edit_name"
                    android:inputType="textCapSentences"/>

                <TextView
                    android:id="@+id/tv_surename"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="2dp"
                    android:text="Sobrenome" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/profile_edit_surename"
                    android:inputType="textCapSentences"/>

                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/contact_phone" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/profile_edit_contact" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data de Nasc."
                    android:id="@+id/tv_birth" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/profile_edit_birthdate"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Genero"
                    android:id="@+id/tv_gender" />
                <Spinner
                    android:layout_width="@dimen/spinners1"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_spinner_gender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_type"
                    android:id="@+id/tv_bloodtype"
                    android:layout_above="@+id/edit_birth"
                    android:layout_toRightOf="@+id/edit_birth"
                    android:layout_toEndOf="@+id/edit_birth" />
                <Spinner
                    android:layout_width="@dimen/spinners1"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_spinner_bloodtype"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_min"
                    android:text="@string/ask_illness"
                    android:id="@+id/tv_city"
                    android:layout_below="@+id/edit_birth"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginBottom="@dimen/margin_max"
                    android:ems="10"
                    android:id="@+id/profile_edit_illness"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_person_section"
                android:paddingBottom="@dimen/margin_max"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile_button_cancel"
                    android:background="@drawable/button_round_corner"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/margin_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/profile_button_confirm"
                    android:background="@drawable/button_round_corner"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/margin_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/concluir" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>